common/sing-box/release/service-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: sing-box
  namespace: sing-box
  labels:
    app.kubernetes.io/name: sing-box
    app.kubernetes.io/instance: sing-box
    app.kubernetes.io/component: proxy
spec:
  selector:
    app.kubernetes.io/name: sing-box
    app.kubernetes.io/instance: sing-box
    app: sing-box
  ports:
    - name: vless
      port: 443
      protocol: TCP
      targetPort: vless
    - name: anytls
      port: 444
      protocol: TCP
      targetPort: anytls
  type: ClusterIP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: sing-box-ingress
  namespace: sing-box
  labels:
    app.kubernetes.io/name: sing-box
    app.kubernetes.io/instance: sing-box
    app.kubernetes.io/component: proxy
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostSNIRegexp(`^.+\.org$`)
      services:
        - name: sing-box
          port: anytls
    - match: HostSNIRegexp(`^.+\.hk$`)
      services:
        - name: sing-box
          port: vless
  tls:
    passthrough: true
